Working with multiple database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+#Admissions Datasource
+spring.admissions.datasource.jdbcUrl=jdbc:mysql://localhost:3301/admissionsdb?serverTimezone=UTC
+spring.admissions.datasource.username=root
+spring.admissions.datasource.password=password
+spring.admissions.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Appointments Datasource
+spring.appointments.datasource.jdbcUrl=jdbc:mysql://localhost:3301/appointmentsdb?serverTimezone=UTC
+spring.appointments.datasource.username=root
+spring.appointments.datasource.password=password
+spring.appointments.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
